Feedback buttons and messages added to modals and integrated into game continuity.  Initial styling container alignment issues fixed.

--- a/style.css
+++ b/style.css
@@ -2,8 +2,10 @@
 body {
     background-color: midnightblue;
     margin: auto;
-
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 h1{
@@ -12,11 +14,9 @@ h1{
     color: cornflowerblue;
 }
 
-.feedback {
-
+#qanda{
+    opacity: 1;
 }
-
-
 /*flex styling*/
 
 
@@ -25,7 +25,7 @@ h1{
     flex-direction: column;
     border: solid cornflowerblue;
     border-width: 5px;
-    margin: 50px auto;
+    margin-bottom: 50px;
     width: 500px;
     height: 150px;
     justify-content: center;
@@ -57,4 +57,31 @@ li {
     justify-content: center;
     align-items: center;
     color: cornflowerblue
+}
+/* #nextQuestion {
+    margin: auto;
+    visibility: hidden;
+}*/
+ul {
+    padding: 0;
+}
+#progress {
+    color: cornflowerblue;
+    margin: 0 auto;
+    text-align: center;
+}
+.modal{
+    position: absolute; 
+    top: 40%;
+    background-color: midnightblue;
+    width: 30%;
+    color: coral;
+    text-align: center;
+    z-index: 2;
+    display: none;
+    margin: 0 auto;
+}
+#playAgain{
+    display: none;
+    margin: 0 auto;
 }
